[package]
name = "amcl"
version = "0.2.0"
authors = ["Nikita Khateev <nikita.khateev@dsr-corporation.com>"]

description = "The Apache Milagro Cryptographic Library (version 3)"
license = "Apache-2.0"
repository = "https://github.com/milagro-crypto/amcl"

[dependencies]

[lib]
name = "amcl"
path = "src/lib.rs"

[features]
default = ["bn254"]
bn254 = []
bn254cx = []
ansii = []
bls24 = []
bls48 = []
bls381 = []
bls383 = []
bls461 = []
brainpool = []
c25519 = []
c41417 = []
ed25519 = []
fp256Bn = []
fp512BN = []
goldilocks = []
hifive = []
nist256 = []
nist384 = []
nist521 = []
nums256e = []
nums256w = []
nums384e = []
nums384w = []
nums512e = []
nums512w = []
secp256k1 = []
rsa2048 = []
rsa3072 = []
rsa4096 = []